--- a/client/src/features/members/member-card/member-card.html
+++ b/client/src/features/members/member-card/member-card.html
@@ -7,6 +7,10 @@
         alt="{{member.displayName}}'s image" class="rounded-lg "
     >
 
+    @if (isOnline()) {
+        <span class="status status-success status-xl absolute top-3 left-3"></span>
+    }
+
     <button (click)="toggleLike($event)" class="absolute top-1 right-1 z-40 btn btn-ghost btn-circle">
         <svg xmlns="http://www.w3.org/2000/svg" 
             [attr.fill]="hasLiked() ? 'red' : 'none'" 
