--- a/client/src/features/members/member-profile/member-profile.html
+++ b/client/src/features/members/member-profile/member-profile.html
@@ -56,7 +56,7 @@
             </div>
         </form>
     }@else {
-        <div>{{member.description}}</div>
+        <div>{{member.description || 'No description provided yet'}}</div>
     }
 </div>
 }
